# tripadvisor-mcp

./: .env.template  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  test_server.py
.github/workflows/: release.yaml
docs/: claude-config-uv.json  claude-config.json
src/tripadvisor_mcp/: __init__.py  main.py  server.py
